--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ IN THIS CHALLENGE, YOU WILL LEARN ABOUT:
 -->
 
 
-    <title>Firstname Lastname's Instruction Tips</title>
+    <title>Riley Sorge</title>
   <script src="https://thimble.mozilla.org/resources/remix/index.js" type="text/javascript"></script>
 </head>
   <body>
@@ -57,7 +57,7 @@ Replace the header contents:
 
     <header>          
       <img src="https://farm9.staticflickr.com/8697/16174797344_3c22e14ba4_o.png" width="100" align="right" height="100" alt="KH_monogram">            
-      <h1>Firstname Lastname's Name of Site</h1>
+      <h1>Riley Sorge How to Tweet </h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
     </header>
@@ -71,10 +71,10 @@ TASK 2
 Add your introduction to your step-by-step-guide, including a title, time required to complete the activity, and a rating of how awesome the activity is. 
 ** Be careful to keep all the HTML tags intact when you are changing the text.
 -->         
-        <div class="introduction">
+        <div class="">
 
           <div class="information">
-            <h1>How to make an awesome ...</h1>
+            <h1>How to make an awesome Tweet ...</h1>
 
             <hr>
             <p><b>Assembly time:</b> 30 minutes<br>
