--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Replace the header contents:
 
     <header>          
       <img src="https://farm9.staticflickr.com/8697/16174797344_3c22e14ba4_o.png" width="100" align="right" height="100" alt="KH_monogram">            
-      <h1>Riley Sorge How to Tweet </h1>
+      <h1>How to make a thick Tweet </h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
     </header>
@@ -74,14 +74,14 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="">
 
           <div class="information">
-            <h1>How to make an awesome Tweet ...</h1>
+            <h1>How to make a thick Tweet ...</h1>
 
             <hr>
-            <p><b>Assembly time:</b> 30 minutes<br>
-              <b>Awesome rating:</b> 10% awesome</p>
+            <p><b>Assembly time:</b> 5 minutes<br>
+              <b>Awesome rating:</b> 100% awesome</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>Are you wondering how to make an effective tweets that engage your followers? Look no further- the thick tweet is here to save the day!</p>
 
           </div>
 
@@ -95,12 +95,12 @@ Add your Things You'll Need.
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>Bottle</li>
-              <li>Cardboard</li>
-              <li>Hand pump (bicycle)</li>
-              <li>Cork (vintage wines)</li>
-              <li>Duct Tape</li>
-              <li>Water</li>
+              <li>A Twitter account</li>
+              <li>Something you want to tweet about</li>
+              <li>A picture relating to said thing you want to tweet about</li>
+              <li>A creative caption</li>
+              <li>A cool hashtag!!</li>
+              <li>Maybe some followers</li>
             </ul>
           </aside>
         </div>
@@ -116,16 +116,16 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Open Twitter and start drafting your tweet</h3>
+              <p>Make sure you have your photo and a tweet, with a creative hashtag in mind.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Get to typing!</h3>
+              <p> Write the content of the tweet.</p>
 
               <!--
 This block contains a photo and has a caption.
