--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Get to typing!</h3>
-              <p> Write the content of the tweet.</p>
+              <p> Write the content of the tweet and play around with what sounds best.</p>
 
               <!--
 This block contains a photo and has a caption.
