--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href= ><a data-flickr-embed="true" href="https://www.flickr.com/photos/seoworldwide/7550960312/in/photolist-cvfDqU-QsdXfx-95ufZf-dcKKmw-8EdNUy-9VF4ub-c5CURy-4otYAz-bmFSxC-472kza-4R9ofJ-dRyXTH-68mZvD-6rtG2a-e1rh1Z-5JToRB-4LPt1V-5Kuiv3-De3DL7-5YHmQs-6gKNKS-dHwgci-9wnPCv-3q4dHH-8XByXb-6Pb4th-sEPby-4TWUpF-fB2YYz-7B3i7c-7ejDMK-dWBuVp-6HGfJy-fTJPAd-69Br4o-6PKHrC-fTN3nu-awY84W-9m3Hb9-bbWzYZ-28xzifK-8t4kC2-xs5xs-7sqhef-9UjqUL-6ZBcTg-6o8nzJ-awVptk-nhyn7A-7veuov" title="twitter"><img src="https://live.staticflickr.com/8152/7550960312_90551c1198_m.jpg" width="225" height="225" alt="twitter"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script><img alt= height="%" width="%" src=></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <a href="https://www.flickr.com/photos/seoworldwide/7550960312/in/photolist-cvfDqU-QsdXfx-95ufZf-dcKKmw-8EdNUy-9VF4ub-c5CURy-4otYAz-bmFSxC-472kza-4R9ofJ-dRyXTH-68mZvD-6rtG2a-e1rh1Z-5JToRB-4LPt1V-5Kuiv3-De3DL7-5YHmQs-6gKNKS-dHwgci-9wnPCv-3q4dHH-8XByXb-6Pb4th-sEPby-4TWUpF-fB2YYz-7B3i7c-7ejDMK-dWBuVp-6HGfJy-fTJPAd-69Br4o-6PKHrC-fTN3nu-awY84W-9m3Hb9-bbWzYZ-28xzifK-8t4kC2-xs5xs-7sqhef-9UjqUL-6ZBcTg-6o8nzJ-awVptk-nhyn7A-7veuov" title="twitter"><img src="https://live.staticflickr.com/8152/7550960312_90551c1198_m.jpg" width="225" height="225" alt="twitter"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script><img alt= height="%" width="%" src=></a>
+              <p class="caption" twitter</p>
             </div>
           </li>
 
