--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Open Twitter and start drafting your tweet</h3>
-              <p>Make sure you have your photo and a tweet, with a creative hashtag in mind.</p> 
+              <h3>Make a Twitter account </h3>
+              <p>You can't tweet without a Twitter account!</p> 
             </div>
           </li>
 
@@ -140,8 +140,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Adding a photo.</h3>
+              <p>Once you've decided on the wording and a fun hashtag, it's time to add the photo.</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
@@ -152,16 +152,16 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Read over the tweet.</h3>
+              <p>Double check your tweet to make sure it makes sense and there's no grammatical errors.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Click "tweet" </h3>
+              <p>Finally, click the "tweet" button to post it to Twitter.</p> 
             </div>
           </li>
 
