changed colors and shit

--- a/index.html
+++ b/index.html
@@ -301,11 +301,11 @@ Customise the visual style and appearance of your guide.
       }
 
       .content {
-        background: #fff;          /* CHANGE THE INSTRUCTION BACKGROUND COLOR HERE */
+        background: #22AABF;          /* CHANGE THE INSTRUCTION BACKGROUND COLOR HERE */
       }
 
       .step-by-step li:before {
-        background: #D3E3E8;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
+        background: #177280;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
         border-top-left-radius: 50px;          /* CHANGE THE INSTRUCTION SHAPE HERE */
         border-bottom-left-radius: 50px;
       }
@@ -408,7 +408,7 @@ Customise the visual style and appearance of your guide.
         top:0;
         left:-40px;
         z-index:-1;
-        background: #D3E3E8; 
+        background: #29CCE6; 
         border-top-left-radius: 50px;
         border-bottom-left-radius: 50px;
       }
