--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ Customise the visual style and appearance of your guide.
       header, footer {
         padding:5%;
         border:0 10%;
-        background-color:#A1D0EB;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
+        background-color:#22AABF;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
         width:100%;
         margin:0px;        
       }
@@ -305,7 +305,7 @@ Customise the visual style and appearance of your guide.
       }
 
       .step-by-step li:before {
-        background: #177280;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
+        background: #45C8E6;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
         border-top-left-radius: 50px;          /* CHANGE THE INSTRUCTION SHAPE HERE */
         border-bottom-left-radius: 50px;
       }
@@ -408,7 +408,7 @@ Customise the visual style and appearance of your guide.
         top:0;
         left:-40px;
         z-index:-1;
-        background: #29CCE6; 
+        background: #70DEFF; 
         border-top-left-radius: 50px;
         border-bottom-left-radius: 50px;
       }
