twitter flickr fix attempt

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="https://www.flickr.com/photos/seoworldwide/7550960312/in/photolist-cvfDqU-QsdXfx-95ufZf-dcKKmw-8EdNUy-9VF4ub-c5CURy-4otYAz-bmFSxC-472kza-4R9ofJ-dRyXTH-68mZvD-6rtG2a-e1rh1Z-5JToRB-4LPt1V-5Kuiv3-De3DL7-5YHmQs-6gKNKS-dHwgci-9wnPCv-3q4dHH-8XByXb-6Pb4th-sEPby-4TWUpF-fB2YYz-7B3i7c-7ejDMK-dWBuVp-6HGfJy-fTJPAd-69Br4o-6PKHrC-fTN3nu-awY84W-9m3Hb9-bbWzYZ-28xzifK-8t4kC2-xs5xs-7sqhef-9UjqUL-6ZBcTg-6o8nzJ-awVptk-nhyn7A-7veuov" title="Twitter logo"><img src="https://live.staticflickr.com/8152/7550960312_90551c1198_m.jpg" width="%" height="%" alt="twitter"></a>
+              <a href=="https://www.flickr.com/photos/102020445@N07/9788639934/in/photolist-fUZkC3-8odcwh-79VTpn-6py2Wi-5K2CnC-aJwKkM-68kJdh-6Cnamc-67f9ue-7oxUfw-afjAte-6YZ2ay-cT5t9q-4M6o9Y-7XtArS-6o7LPY-4Emjsg-3eYetc-dXKksx-bvsRPW-9u9UyW-CCMZDE-nhyn7A-7m7pMG-dPnfrQ-5XiwT9-5m4Ftr-5JToRB-JWJfpk-66eFft-635XkT-8eFQ8w-9WBtrm-6pTv1S-4BmDYP-6H1Fu2-4Lyxj9-68kJdu-5sdb3F-4cBcmW-ofaKRs-aSzWkD-8odct1-cMy58b-5StvDx-6fomFV-7FLgun-3f1uUp-5Zkfc6-68kJdj" title="Twitter logo"><img src="https://live.staticflickr.com/5328/9788639934_8df086fcb4_m.jpg" width="%" height="%" alt="Twitter logo"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>></a>
             <p class="caption" align="center"><strong>Twitter was created in 2006.</strong></p>
             </div>
           </li>
