orange instruction boxes

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ Customise the visual style and appearance of your guide.
       }
 
       .content {
-        background: #1DA1DE;          /* CHANGE THE INSTRUCTION BACKGROUND COLOR HERE */
+        background: #FF9A21;          /* CHANGE THE INSTRUCTION BACKGROUND COLOR HERE */
       }
 
       .step-by-step li:before {
