--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ Customise the visual style and appearance of your guide.
       header, footer {
         padding:5%;
         border:0 10%;
-        background-color:#ffb864;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
+        background-color:#ffc27a;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
         width:100%;
         margin:0px;        
       }
@@ -278,7 +278,7 @@ Customise the visual style and appearance of your guide.
       ul {
         font-family:"Courier New", Courier, monospace;
         box-shadow:0px 2px 10px #ddd;
-        background-color: #8de5ff;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        background-color: #b8efff;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
         border: 1px solid #555;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
@@ -301,7 +301,7 @@ Customise the visual style and appearance of your guide.
       }
 
       .content {
-        background: #ffb864;          /* CHANGE THE INSTRUCTION BACKGROUND COLOR HERE */
+        background: #ffc27a;          /* CHANGE THE INSTRUCTION BACKGROUND COLOR HERE */
       }
 
       .step-by-step li:before {
