--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="">
 
           <div class="information">
-            <h1>How to make a thick Tweet ...</h1>
+            <h1>How to prepare for an interview</h1>
 
             <hr>
-            <p><b>Assembly time:</b> 5 minutes<br>
+            <p><b>Assembly time:</b> 1 hour<br>
               <b>Awesome rating:</b> 100% awesome</p>
             <hr>
 
-            <p>Are you wondering how to make an effective tweets that engage your followers? Look no further- the thick tweet is here to save the day!</p>
+            <p>Are you struggling to prepare for an interview? Look no further! Here's how to pick a subject and conduct a quality interview.</p>
 
           </div>
 
@@ -95,12 +95,11 @@ Add your Things You'll Need.
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>A Twitter account</li>
-              <li>Something you want to tweet about</li>
-              <li>A picture relating to said thing you want to tweet about</li>
-              <li>A creative caption</li>
-              <li>A cool hashtag!!</li>
-              <li>Maybe some followers</li>
+              <li>Access to a computer</li>
+              <li>An email/ phone – something to contact your subject with</li>
+              <li>A topic</li>
+              <li>A subject</li>
+              <li>A list of questions</li>
             </ul>
           </aside>
         </div>
@@ -116,7 +115,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a Twitter account </h3>
+              <h3>Figure out a reliable source for your topic </h3>
               <p>You can't tweet without a Twitter account!</p> 
             </div>
           </li>
