--- a/index.html
+++ b/index.html
@@ -116,15 +116,15 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Figure out a reliable source for your topic </h3>
-              <p>You can't tweet without a Twitter account!</p> 
+              <p>For example: If your story is on the rise of a new teaching method in elementary schools, you could interview an elementary school teacher and an early education professor. </p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Get to typing!</h3>
-              <p> Write the content of the tweet and play around with what sounds best.</p>
+              <h3>Contact your source and confirm an interview time.</h3>
+              <p> Once you've obtained your source, send them an email or give them a call to confirm a time and location to conduct the interview.</p>
 
               <!--
 This block contains a photo and has a caption.
@@ -139,8 +139,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Adding a photo.</h3>
-              <p>Once you've decided on the wording and a fun hashtag, it's time to add the photo.</p>
+              <h3>Prepare your thoughtful questions</h3>
+              <p>Start brainstorming tailored questions to each interview subject. Start with your "who, what, when, where, why, how?" Then think of how each source can give a different perspective based on their background. </p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/5jWNpLvdocU" frameborder="0" allowfullscreen></iframe>
