--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ Customise the visual style and appearance of your guide.
       }
 
       .step-by-step li:before {
-        background: #45C8E6;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
+        background: #417378;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
         border-top-left-radius: 50px;          /* CHANGE THE INSTRUCTION SHAPE HERE */
         border-bottom-left-radius: 50px;
       }
