--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Replace the header contents:
 
     <header>          
       <img src="https://i.imgur.com/EnQwNt1.png" width="100" align="right" height="100" alt="RS_monogram">            
-      <h1>How to make a thick Tweet </h1>
+      <h1>How to prepare for an interview </h1>
       <h3>An Instruction Challenge for JOUR 108 by Riley Sorge</h3>
 
     </header>
