--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
               <a href=="<a data-flickr-embed="true" href="https://www.flickr.com/photos/115243989@N03/12206996205/in/photolist-jAG3FP-Qxc9o-QxAaz-Qxc15-t8QwGT-e3iup2-rsmzCV-3xU18-2jCfhdR-dC7sMn-5TNL1e-2kWD2zr-DSe4X-bserQ6-649uMo-2a3hQ-2ih83KC-5xS3Pg-dGcmVk-5U7uqn-bKf5vz-7sKM8Y-R9srGE-9dQgNZ-5qp6u5-5RpqV3-g5RJEk-8QQ8K3-5RVF1a-4k82a6-3qMfSb-9dQgPR-3qMfY7-g5RJxg-bBjGdi-b9sTLF-8WCHB4-94jowj-4nTGxY-bses1v-g5QZrZ-bsesiR-g5QZna-g5Rg2L-25GSr-g5RaZJ-4nPBXr-aF39Pd-6QH6wk-g5Rg1d" title="calendar"><img src="https://live.staticflickr.com/5524/12206996205_d4ac3747bb_m.jpg" width="240" height="180" alt="calendar"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>"><img src="https://live.staticflickr.com/5328/9788639934_8df086fcb4_m.jpg" width="%" height="%" alt="Twitter logo"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script></a>
-            <p class="caption" align="center"><strong>Twitter was created in 2006.</strong></p>
+            <p class="caption" align="center"><strong>Using a calendar can help you stay organized.</strong></p>
             </div>
           </li>
 
@@ -151,16 +151,16 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Read over the tweet.</h3>
-              <p>Double check your tweet to make sure it makes sense and there's no grammatical errors.</p> 
+              <h3>Do some research</h3>
+              <p>Research your topic so you have some background knowledge and can better understand your interview subjects..</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Click "tweet" </h3>
-              <p>Finally, click the "tweet" button to post it to Twitter.</p> 
+              <h3> Interview away! </h3>
+              <p>You've done all the leg work, now it's time to interview! Make sure to avoid asking "yes" or "no" questions and focus on more open eded questions to get the most out of your subject.</p> 
             </div>
           </li>
 
