--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ with a paragraph to create a photo with a caption.
               <p>Start brainstorming tailored questions to each interview subject. Start with your "who, what, when, where, why, how?" Then think of how each source can give a different perspective based on their background. </p>
 
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/5jWNpLvdocU" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/NWDL_UYMc7Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
           </li>
