--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 
     <footer>
       <p>The original how-to appeared in <a href="https://www.wikihow.com/Tweet" title="How to Tweet - Wikihow">WikiHow</a>.</p>
-      <p>Images are by <a href="https://www.flickr.com/photos/otacke/13970870674/in/photolist-nhyn7A-BKC6GV-34os6J-PTVm6-4wY318-8Asuh1-6P2ATp-ounSD7-EFSB2-c9SY9b-MExxFF-7JnHAq-65chTD-rZJJjF-Q8jxu-6ryvrY-7vcKZW-9epeCg-6hXG97-6Kj728-dPnfrQ-8JvLGv-f4GVpe-6itr1f-aMfi4B-6oHdCf-5TDecj-7ogtWM-6diDQf-6qrtdW-D5Z6i-ChUfg2-9r5NWE-xs5xs-7veuov-8AszQd-bsNQPe-6U3qwd-eUxX1G-USTwGr-5VvTyC-6zP42c-bq2Cz6-6jzre8-6XFQeE-6vQ8yM-7mYasP-6qrtc7-XUCVcJ-6ckB6r"title="Twitter bird on Flickr">Twitter bird from Flickr</a></p>
+      <p>Images are by <a href="https://www.flickr.com/photos/otacke/13970870674/in/photolist-nhyn7A-BKC6GV-34os6J-PTVm6-4wY318-8Asuh1-6P2ATp-ounSD7-EFSB2-c9SY9b-MExxFF-7JnHAq-65chTD-rZJJjF-Q8jxu-6ryvrY-7vcKZW-9epeCg-6hXG97-6Kj728-dPnfrQ-8JvLGv-f4GVpe-6itr1f-aMfi4B-6oHdCf-5TDecj-7ogtWM-6diDQf-6qrtdW-D5Z6i-ChUfg2-9r5NWE-xs5xs-7veuov-8AszQd-bsNQPe-6U3qwd-eUxX1G-USTwGr-5VvTyC-6zP42c-bq2Cz6-6jzre8-6XFQeE-6vQ8yM-7mYasP-6qrtc7-XUCVcJ-6ckB6r"title="Mistie Pollard on Flickr">Twitter bird from Flickr</a></p>
     </footer>
 
     <!--
